# pw_homework_module_14

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  test.db  test_db.sqlite3
alembic/: env.py
alembic/versions/: 480a8ba52383_add_updated_at_to_user.py  4eeec3590b52_initial_migration.py  610a84c8cc59_initial_migration.py
docs/source/: conf.py  index.rst  src.auth.rst  src.database.rst  src.repository.rst  src.routes.rst  src.rst  src.schemas.rst
src/: main.py
src/auth/: auth.py
src/cache/: redis_client.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contact.py  users.py
src/schemas/: contact.py  user.py
src/services/: cloudinary_service.py  email.py
src/services/templates/: email_reset_password.html  email_verify.html
src/templates/: reset_password.html
tests/: conftest.py
tests/funcional/: test_auth_routes.py  test_contacts_routes.py
tests/unit/: test_auth.py  test_cloudinary_service.py  test_db.py  test_email_service.py  test_main.py  test_repository_auth.py  test_repository_contacts.py  test_repository_users.py  test_users_routes.py
